# lambda-function

./: .gitignore  .pre-commit-config.yaml  README  sending.py
backend/: conftest.py  db.sqlite3  lambda_functions.json  pyproject.toml  pytest.ini
backend/api/: settings.py  urls.py
backend/functions/: models.py  permissions.py  serializers.py  tests.py  urls.py  utility.py  views.py
backend/functions/management/commands/: delete_null_owner.py  load_functions.py
backend/functions/migrations/: 0001_initial.py  0002_function_owner.py  0002_lambda_owner.py  0003_function_created_at_function_description_and_more.py  0003_rename_lambda_function.py  0004_function_runtime.py  0005_alter_function_runtime.py
backend/functions/tests/: test_commands.py  test_models.py  test_serializers.py  test_views.py
backend/tests/: test_one.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_lst_of_functions.py  0003_remove_user_lst_of_functions.py
backend/users/tests/: test_models.py  test_serializers.py  test_views.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Business.jsx  Button.jsx  CardDeal.jsx  Dropdown.jsx  Input.jsx  Loader.jsx  Modal.jsx  Nav.jsx  NavBar.jsx  Table.jsx  index.js
frontend/src/hooks/auth/: PrivateRoute.js  useToken.js
frontend/src/pages/: CreateFunction.js  EditFunction.js  LandingPage.js  ListFunctions.js  Login.js  NotFound.js  SignUp.js  TestTools.js
